--- a/static/manifest.json
+++ b/static/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "DevelopmentHit",
-  "short_name": "DevelopmentHit",
+  "name": "DeveloperHit",
+  "short_name": "DeveloperHit",
   "icons": [
     {
       "src": "img/icons/android-chrome-192x192.png",
