--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "vue": "^2.3.3",
+    "vue-resource": "^1.3.4",
     "vue-router": "^2.3.1",
     "vuetify": "^0.16.9",
     "vuex": "^3.0.1"
